Fixes from Mike Curtis