@@ -58,6 +58,12 @@ public class NaiveUserAgent implements org.xhtmlrenderer.extend.UserAgentCallbac
      * Creates a new instance of NaiveUserAgent
      */
     public NaiveUserAgent() {
+        try {
+            //File.toURL is buggy
+            setBaseURL(new File(".").toURI().toURL().toExternalForm());
+        } catch (MalformedURLException e) {
+            e.printStackTrace();  //To change body of catch statement use File | Settings | File Templates.
+        }
     }
 
     /**
@@ -103,7 +109,9 @@ public class NaiveUserAgent implements org.xhtmlrenderer.extend.UserAgentCallbac
                 }
             }
         }
-        if (ir == null) ir = new ImageResource(null);
+        if (ir == null) {
+           ir = new ImageResource(null);
+        }
         return ir;
     }
 
@@ -127,29 +135,24 @@ public class NaiveUserAgent implements org.xhtmlrenderer.extend.UserAgentCallbac
     }
 
     public String resolveURI(String uri) {
-        URL result;
-        if (baseURL == null) {
+        String ret = null;
+        if (uri != null) {
             try {
-                result = new URL(uri);
-                setBaseURL(result.toExternalForm());
-                return result.toExternalForm();
-            } catch (MalformedURLException e) {
-                try {
-                    setBaseURL(new File(".").toURI().toURL().toExternalForm());
-                } catch (MalformedURLException e1) {
-                    XRLog.exception("The default NaiveUserAgent doesn't know how to resolve the base URL for " + uri);
-                    return null;
+                URL result = new URL(uri);
+                ret = result.toString();
+            }
+            catch (MalformedURLException e) {
+                if (baseURL != null) {
+                    try {
+                        URL result = new URL(new URL(baseURL), uri);
+                        ret = result.toString();
+                    }
+                    catch (MalformedURLException e1) {
+                    }
                 }
             }
         }
-        try {
-            result = new URL(new URL(baseURL), uri);
-        } catch (MalformedURLException e1) {
-            XRLog.exception("The default NaiveUserAgent cannot resolve the URL " + uri + " with base URL " + baseURL);
-            return null;
-        }
-        return result.toString();
-
+       return ret;
     }
 
     public String getBaseURL() {
@@ -161,8 +164,8 @@ public class NaiveUserAgent implements org.xhtmlrenderer.extend.UserAgentCallbac
  * $Id$
  *
  * $Log$
- * Revision 1.24  2006/04/09 04:41:30  tobega
- * Friendlier URL handling
+ * Revision 1.25  2006/04/25 00:23:20  peterbrant
+ * Fixes from Mike Curtis
  *
  * Revision 1.23  2006/04/08 08:21:24  tobega
  * relative urls and linked stylesheets
